test/fail/2/ConcatSpace.java
public class ConcatSpace {

  public String main(String a, String b) {
    return a + b;
  }

}
